# any-llm-to-llamafile

./: .gitignore  README.md  download_model_hf.py  model.args  pyproject.toml  test_python_api.py
models/gpt-oss-20b/: USAGE_POLICY
