[project]
name = "any-llm-to-llamafile"
version = "0.1.0"
description = ""
authors = [
    {name = "Faysal, Sheikh",email = "u1175660@internal.imsglobal.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
